--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 "Samira Zayadi", "Sana Benammar", "Sana Bengharbia", "Sana Zouari", 
                 "Sarra Benamor", "Sondes Majdoub", "Sonia Elaid", "Souhaila Rahouaj", 
                 "Soumaya Frouja", "Taief Zammel", "Takwa Turki", "Talel Ghozzi", 
-                "Taoufik Sahli", "Tarek Elasfour", "Teheni Fehri", "Thouraya Najar", 
+                "Lamya Zrelli", "Tarek Elasfour", "Teheni Fehri", "Thouraya Najar", 
                 "Tmayem Benkhedher", "Wafa Gobbar", "Walid Helel", "Wided Bendewed", 
                 "Yamina Bihaouiya", "Yosra Bellalouna", "Zohra Benhouia", "Zohra Bouaouina", 
                 "Zoubeir Sassi", "Zouhour Jazi"
@@ -348,6 +348,7 @@
                 ],
                 security: [
                     "Signature électronique",
+                    "Alerte d'attaque dans Sophos Central ",
                     "Sauvegarde/Backup",
                     "Mise à jour des pare-feu",
                     "Gestion des identifiants"
