--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
                 ],
                 security: [
                     "Signature électronique",
+                    "Alerte SOPHOS",
                     "Sauvegarde/Backup",
                     "Mise à jour des pare-feu",
                     "Gestion des identifiants"
