--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
                     "Changement de disque dur",
                     "Changement de bloc d'alimentation",
                     "Ajout de mémoire RAM",
+                    "Autres",
                     "Installation de pilotes/drivers",
                     "Ajout de licences"
                 ],
